[gd_scene load_steps=5 format=3 uid="uid://b7oqu5yasf0tp"]

[ext_resource type="Script" path="res://addons/mobile_controls/components/screen_gesture.gd" id="1_jq8dg"]
[ext_resource type="Texture2D" uid="uid://c6rnxjyyev50s" path="res://addons/mobile_controls/icons/pan_icon.svg" id="2_cpxcj"]
[ext_resource type="Texture2D" uid="uid://bljx7ho1q7i11" path="res://addons/mobile_controls/icons/rotate_icon.svg" id="3_bptiq"]
[ext_resource type="Script" path="res://addons/mobile_controls/components/screen_mode_button.gd" id="3_uit33"]

[node name="ScreenGesture" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jq8dg")
pan_icon = ExtResource("2_cpxcj")
rotate_icon = ExtResource("3_bptiq")

[node name="DO NOT USE" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -11.5
offset_right = 94.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "DO NOT USE THIS SCENE"

[node name="LongPressTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.117647)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScreenModeButton" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("2_cpxcj")
expand_mode = 1
stretch_mode = 4
script = ExtResource("3_uit33")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TextureButton" type="TextureButton" parent="MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("2_cpxcj")
texture_pressed = ExtResource("2_cpxcj")
texture_hover = ExtResource("2_cpxcj")
texture_disabled = ExtResource("2_cpxcj")
texture_focused = ExtResource("2_cpxcj")
ignore_texture_size = true
stretch_mode = 4

[connection signal="timeout" from="LongPressTimer" to="." method="_long_press_timeout"]
[connection signal="pressed" from="MarginContainer/ScreenModeButton" to="." method="_toggle_touchscreen_mode"]
